<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24px"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_alarm_add_black_24px"
            android:title="@string/reminder" />
        <item
            android:id="@+id/nav_article"
            android:icon="@drawable/ic_assignment_black_24px"
            android:title="@string/article" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_add_alert_black_24px"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24px"
            android:title="@string/account" />



    </group>
</menu>